# dumpi_to_graph

./: CMakeLists.txt  LICENSE  README.md  one_step_build.sh
config/: default.json  dumpi_and_csmpi.json  dumpi_and_csmpi_and_papi.json  dumpi_and_csmpi_condense_matched_tests.json  dumpi_and_csmpi_merge_matched_tests.json  dumpi_and_papi.json  dumpi_only.json  dumpi_only_condense_matched_tests.json  dumpi_only_merge_matched_tests.json  with_callstacks.json
include/dumpi_to_graph/: CSMPI_Callstack.hpp  CSMPI_Trace.hpp  Channel.hpp  CollectiveChannel.hpp  CommunicatorManager.hpp  Configuration.hpp  Debug.hpp  Event.hpp  EventGraph.hpp  EventGraphModel.hpp  Glob.hpp  Logging.hpp  Request.hpp  Trace.hpp  Utilities.hpp  blocking_collective_callbacks.hpp  blocking_p2p_callbacks.hpp  communicator_management_callbacks.hpp  finalize_callbacks.hpp  init_callbacks.hpp  matching_function_callbacks.hpp  nonblocking_p2p_callbacks.hpp  request_mutating_callbacks.hpp  undumpi_callbacks.hpp
src/: CSMPI_Callstack.cpp  CSMPI_Trace.cpp  Channel.cpp  CollectiveChannel.cpp  CommunicatorManager.cpp  Configuration.cpp  Debug.cpp  Event.cpp  EventGraph.cpp  Glob.cpp  Makefile  Request.cpp  Trace.cpp  Utilities.cpp  blocking_collective_callbacks.cpp  blocking_p2p_callbacks.cpp  communicator_management_callbacks.cpp  dumpi_to_graph.cpp  finalize_callbacks.cpp  init_callbacks.cpp  matching_function_callbacks.cpp  nonblocking_p2p_callbacks.cpp  request_mutating_callbacks.cpp  undumpi_callbacks.cpp
test/: validate_event_graph.py
